--- a/index.html
+++ b/index.html
@@ -23,11 +23,24 @@
   <body>
     <!-- landing-page -->
     <header>
-      <div class="logo"></div>
-      <nav></nav>
+      <div class="logo">
+        <a href="#">islam</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">services</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="land-page">
-      <div></div>
+      <div>
+        <h2>Hello, I'm Islam</h2>
+        <span>content creator</span>
+        <p>i build life changing courses</p>
+        <button>view my work</button>
+      </div>
       <div></div>
     </div>
     <!-- landing-page -->
