--- a/index.html
+++ b/index.html
@@ -35,14 +35,23 @@
       </nav>
     </header>
     <div class="land-page">
-      <div>
+      <div class="text-holder">
         <h2>Hello, I'm Islam</h2>
         <span>content creator</span>
         <p>i build life changing courses</p>
         <button>view my work</button>
       </div>
-      <div></div>
+      <div class="icon-holder">
+        <i class="fa-brands fa-square-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
     </div>
     <!-- landing-page -->
+
+    <!--start Services -->
+
+    <!--end Services -->
   </body>
 </html>
