--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Put your description here." />
     <title>Codzilla</title>
     <!-- the main style sheet -->
     <link rel="stylesheet" href="style.css" />
-    <!-- the framework -->
-    <link rel="stylesheet" href="framework.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -28,9 +27,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#">services</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#services">services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -51,7 +50,137 @@
     <!-- landing-page -->
 
     <!--start Services -->
-
+    <section class="services" id="services">
+      <h2 class="title">services</h2>
+      <div class="container">
+        <div class="box">
+          <div><i class="fas fa-edit"></i></div>
+          <h3>Script Writing</h3>
+          <p>
+            Research and write scripts for different topics that can then be
+            directly recorded for video production
+          </p>
+        </div>
+        <div class="box">
+          <div><i class="fa-solid fa-video"></i></div>
+          <h3>Video Production</h3>
+          <p>
+            Record and shoot videos taking into consideration proper settings,
+            followed by production & post-production work
+          </p>
+        </div>
+        <div class="box">
+          <div><i class="fa-solid fa-graduation-cap"></i></div>
+          <h3>Curriculum Development</h3>
+          <p>
+            Develop complete curriculums for various technical topics to produce
+            digital transformative courses
+          </p>
+        </div>
+      </div>
+    </section>
     <!--end Services -->
+
+    <!-- start projects -->
+    <div class="projects" id="projects">
+      <h2 class="title">projects</h2>
+      <div class="container">
+        <div class="card">
+          <div class="img-holder"><img src="images/work1.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Dev Books</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img-holder"><img src="images/work2.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Dev Books</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img-holder"><img src="images/work3.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Dev Books</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img-holder"><img src="images/work4.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Dev Books</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img-holder"><img src="images/work5.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Dev Books</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img-holder"><img src="images/work6.jpg" alt="" /></div>
+          <div class="text-holder1">
+            <p>Script Writing & Video Production</p>
+            <div>
+              <span>Internet</span>
+              <a href="#">MORE DETAILS</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end projects -->
+
+    <!-- start contact -->
+    <div class="contact" id="contact">
+      <h2 class="title">Let's work together</h2>
+      <div class="c-holder">
+        <div>
+          <i class="fa-solid fa-phone-flip"></i>
+          <p>Phone</p>
+          <span>+20122222222</span>
+        </div>
+        <div>
+          <i class="fa-solid fa-envelope"></i>
+          <p>Email</p>
+          <span>business@islam.com</span>
+        </div>
+      </div>
+    </div>
+    <!-- end contact -->
+
+    <!-- footer -->
+    <div class="footer">
+      <div class="container">
+        <div>
+          <p>Copyrights <span>@Adham Mohammed</span></p>
+        </div>
+        <div class="icon-holder">
+          <i class="fa-brands fa-square-linkedin"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
   </body>
 </html>
